# pollibee_drone_simulation

./: CMakeLists.txt  README.md  package.xml  setup.py
config/: drone_params.yaml  environment_params.yaml  logging_config.yaml  rviz_config.rviz  simulation_params.yaml  yolo11_config.yaml  yolo_config.yaml  yolov11.cfg
data/: performance_metrics.yaml  simulation_results.csv
launch/: LICENSE.txt  README.md  drone.launch  drone.launch.py  drone_controller.launch  rviz.launch  rviz.launch.py  simulation.launch.py  yolo_detector.launch
models/charging_station/: model.config  model.sdf
models/custom_ground/: model.sdf
models/drone_model/: model.sdf
models/flower/: model.config  model.sdf
models/obstacle/: model.config  model.sdf
models/plant/: model.config  model.sdf
models/plant_model/: model.sdf
models/pollibee_drone/: model.config  model.sdf
plugins/: LICENSE.txt
plugins/gazebo/: gazebo_plugin.cpp  gazebo_plugin.h
plugins/gazebo/battery_plugin/: battery_plugin.cpp  battery_plugin.h
plugins/gazebo/wind_plugin/: wind_plugin.cpp  wind_plugin.h
plugins/python/: python_plugin.cpp  python_plugin.h
plugins/ros/: ros_plugin.cpp  ros_plugin.h
plugins/ros/mission_planner_plugin/: mission_planner_plugin.cpp  mission_planner_plugin.h
plugins/ros/pollination_control_plugin/: pollination_control_plugin.cpp  pollination_control_plugin.h
plugins/rviz/: rviz_plugin.cpp  rviz_plugin.h
plugins/yolo/: README.md  yolo_config.json  yolo_plugin.cpp  yolo_plugin.h  yolov11.cfg
scripts/: LICENSE.txt  README.md  battery_monitor.py  battery_simulator.py  co2_simulator.py  communication_handler.py  control_drone.py  data_logging.py  drone_controller.py  environment_simulator.py  error_handling.py  flower_detection.py  light_simulator.py  main.py  mission_planner.py  obstacle_avoidance.py  path_planner.py  path_planning.py  performance_metrics.py  pollination_control.py  pollination_motor.py  pollination_planner.py  pollination_simulator.py  sensor_fusion.py  simulation_interface.py  trajectory_follower.py  trajectory_planner.py  visualization.py  visualize_results.py  wind_simulation.py  wind_simulator.py  yolo_detection.py  yolo_detector.py
tests/integration_tests/: test_simulation.py  test_visualization.py
tests/unit_tests/: test_control_drone.py  test_pollination_motor.py  test_yolo_detection.py
world/: pollibee_world.world  simulation_world.world
